added hover squares indicator

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://onlyraydek.github.io/hover-squares-game",
+  "homepage": "https://onlyraydek.github.io/hover-squares-game",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
